<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".CredentialsActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoplist_name_title"
        android:textColor="@color/purple_500"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/component_round_drawable"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp">
            <!-- Email -->
            <TextView
                android:id="@+id/email_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="180"
                android:background="@drawable/edit_text_drawable"
                android:elevation="16dp"
                android:ems="13"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="22sp" />

            <!-- Password -->
            <TextView
                android:id="@+id/password_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="180"
                android:background="@drawable/edit_text_drawable"
                android:elevation="16dp"
                android:ems="13"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="22sp" />


        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/log_in" />


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/register" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>